maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: ';' expected but ')' found.
    else if (a==2) gauche())
                           ^